# ChangeLog for app-admin/conserver
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/conserver/ChangeLog,v 1.10 2004/01/23 14:46:46 agriffis Exp $

  23 Jan 2004; Aron Griffis <agriffis@gentoo.org> conserver-8.0.9.ebuild:
  stable on alpha and ia64

  13 Jan 2004; Jason Wever <weeve@gentoo.org> conserver-8.0.9.ebuild:
  Changed chmod syntax from . to : to resolve bug #38031

  10 Jan 2004; Jason Wever <weeve@gentoo.org> conserver-8.0.3.ebuild,
  conserver-8.0.7.ebuild, conserver-8.0.8.ebuild, conserver-8.0.9.ebuild:
  Marked 8.0.9 stable on x86 and sparc and cleaned up old versions.

*conserver-8.0.9 (10 Dec 2003)

  10 Dec 2003; Jason Wever <weeve@gentoo.org> conserver-8.0.9.ebuild:
  Version bump.

  10 Dec 2003; Jason Wever <weeve@gentoo.org> conserver-8.0.1-r1.ebuild,
  conserver-8.0.1.ebuild, conserver-8.0.7.ebuild:
  Marked 8.07 stable on x86 and sparc, removed 8.01 and 8.01-r1.

*conserver-8.0.8 (05 Dec 2003)

  05 Dec 2003; Jason Wever <weeve@gentoo.org> conserver-8.0.8.ebuild:
  version bump

*conserver-8.0.7 (23 Nov 2003)

  23 Nov 2003; Jason Wever <weeve@gentoo.org> conserver-8.0.3.ebuild,
  conserver-8.0.7.ebuild:
  Version bump for conserver-8.0.7 and marked conserver-8.0.3 stable on x86 and
  sparc.

*conserver-8.0.3 (07 Oct 2003)

*conserver-8.0.1-r1 (07 Oct 2003)

  07 Oct 2003; Jason Wever <weeve@gentoo.org> conserver-8.0.1-r1.ebuild,
  conserver-8.0.3.ebuild, files/conserver.pam:
  Added fix for pam to 8.0.1-r1 and version bumped to 8.0.3.

*conserver-8.0.1 (03 Oct 2003)

  03 Oct 2003; Jason Wever <weeve@gentoo.org> conserver-8.0.1.ebuild,
  metadata.xml, files/conserver.confd, files/conserver.initd:
  Initial import.  Satisfies bug #8652.
