@@ -1,7 +1,9 @@
-MD5 8773c50fcf0e561b5071ae9f02e76101 ChangeLog 1764
+MD5 34d19b11ae65afd740e0957eeee3334f ChangeLog 1880
 MD5 7f033a471caee0009d23b2cd1124f815 conserver-8.0.9.ebuild 1996
+MD5 e44cb699192a2243bfe6066053cd6b45 conserver-8.1.1.ebuild 1997
 MD5 db109ae3e620120b654118ff198a9d0a metadata.xml 1062
 MD5 3a98b3aa2654214cd71e8b2a5b41e4d2 files/conserver.confd 299
 MD5 338bf82fc823c16c8cd8924440abb096 files/conserver.initd 1203
 MD5 a5311bbc9c1fc378a6b0bfb3ca1b2394 files/conserver.pam 431
 MD5 bf9fcdbac9f2ce05e6fcd22b9034270e files/digest-conserver-8.0.9 67
+MD5 611485ef78db44224bff6e885197badd files/digest-conserver-8.1.1 67
