@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/conserver
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/conserver/ChangeLog,v 1.10 2004/01/23 14:46:46 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/conserver/ChangeLog,v 1.11 2004/02/13 16:12:17 weeve Exp $
+
+*conserver-8.1.1 (13 Feb 2004)
+
+  13 Feb 2004; Jason Wever <weeve@gentoo.org> conserver-8.1.1.ebuild:
+  Version bump.
 
   23 Jan 2004; Aron Griffis <agriffis@gentoo.org> conserver-8.0.9.ebuild:
   stable on alpha and ia64
